--- a/simulation/html/IMMD_design_tool_v01.html
+++ b/simulation/html/IMMD_design_tool_v01.html
@@ -65,10 +65,7 @@ table td { padding:7px 5px; text-align:left; vertical-align:top; border:1px soli
 
 
 
-  </style></head><body><div class="content"><h1>IMMD DESIGN TOOL</h1><!--introduction--><!--/introduction--><h2>Contents</h2><div><ul><li><a href="#1">M. U&#287;ur</a></li><li><a href="#2">2017</a></li><li><a href="#4">SPECIFICATIONS</a></li><li><a href="#5">Fundamental blocks:</a></li><li><a href="#6">General Inputs</a></li><li><a href="#7">Stator Parameters</a></li><li><a href="#8">Rotor Parameters</a></li><li><a href="#9">Rectifier parameters</a></li><li><a href="#10">DC Link parameters</a></li><li><a href="#11">Inverter Parameters</a></li><li><a href="#12">Motor design continue</a></li><li><a href="#13">RL Load design</a></li><li><a href="#14">NOT USED RIGHT NOW</a></li><li><a href="#15">An example motor from Kollmorgen</a></li></ul></div><h2>M. U&#287;ur<a name="1"></a></h2><h2>2017<a name="2"></a></h2><p>In this file, design of the IMMD system will be conducted. Analytical design methods will be used with the aid of simulations. The relations between the blocks will be considered. The design is for the prototype on BAP Project.</p><h2>SPECIFICATIONS<a name="4"></a></h2><p>Permanent Magnet Brushless DC Motor (PM-BLDC) Cooling: Forced air cooling Motor efficiency aim = 98 % Power stage efficiency aim = 98 % Average winding temperature rise: 130 C Hot spot temperature rise: 160 C Semiconductor temperature rise: 100 C Maximum winding temperature: 200 C</p><h2>Fundamental blocks:<a name="5"></a></h2><p>Rotor Stator Inverter DC Link Rectifier Controller Heat sink</p><h2>General Inputs<a name="6"></a></h2><pre class="codeinput"><span class="comment">% motor catalog (Kollmorgen, KBM(S)-88X00-X, B)</span>
-<span class="comment">% http://productpage.3dpublisher.net/3dproductpage/Qsvalidlogin.asp?GUID=1249850940083&amp;name=KBM(S)-88&amp;isCate=true</span>
-<span class="comment">% http://www.kollmorgen.com/en-us/products/motors/direct-drive/kbm-series-frameless/_literature/kbm-selection-guide-en-us_revg/</span>
-Prated = 5.46e3; <span class="comment">% Watts</span>
+  </style></head><body><div class="content"><h1>IMMD DESIGN TOOL</h1><!--introduction--><!--/introduction--><h2>Contents</h2><div><ul><li><a href="#1">M. U&#287;ur</a></li><li><a href="#2">2017</a></li><li><a href="#4">SPECIFICATIONS</a></li><li><a href="#12">Fundamental blocks:</a></li><li><a href="#19">General Inputs</a></li><li><a href="#22">Stator Parameters</a></li><li><a href="#23">Rotor Parameters</a></li><li><a href="#24">Rectifier parameters</a></li><li><a href="#25">DC Link parameters</a></li><li><a href="#26">Inverter Parameters</a></li><li><a href="#27">Motor design continue</a></li><li><a href="#28">RL Load design</a></li></ul></div><h2>M. U&#287;ur<a name="1"></a></h2><h2>2017<a name="2"></a></h2><p>In this file, design of the IMMD system will be conducted. Analytical design methods will be used with the aid of simulations. The relations between the blocks will be considered. The design is for the prototype on BAP Project.</p><h2>SPECIFICATIONS<a name="4"></a></h2><p>Permanent Magnet Brushless DC Motor (PM-BLDC)</p><p>Cooling: Forced air cooling</p><p>Motor efficiency aim = 98 %</p><p>Power stage efficiency aim = 98 %</p><p>Average winding temperature rise: 130 C</p><p>Hot spot temperature rise: 160 C</p><p>Semiconductor temperature rise: 100 C</p><p>Maximum winding temperature: 200 C</p><h2>Fundamental blocks:<a name="12"></a></h2><p>Rotor</p><p>Stator</p><p>Inverter</p><p>DC Link</p><p>Rectifier</p><p>Controller</p><p>Heat sink</p><h2>General Inputs<a name="19"></a></h2><p>motor catalog (Kollmorgen, KBM(S)-88X00-X, B)</p><p><a href="http://productpage.3dpublisher.net/3dproductpage/Qsvalidlogin.asp?GUID=1249850940083&amp;name=KBM(S)-88&amp;isCate=true">http://productpage.3dpublisher.net/3dproductpage/Qsvalidlogin.asp?GUID=1249850940083&amp;name=KBM(S)-88&amp;isCate=true</a></p><p><a href="http://www.kollmorgen.com/en-us/products/motors/direct-drive/kbm-series-frameless/_literature/kbm-selection-guide-en-us_revg/">http://www.kollmorgen.com/en-us/products/motors/direct-drive/kbm-series-frameless/_literature/kbm-selection-guide-en-us_revg/</a></p><pre class="codeinput">Prated = 5.46e3; <span class="comment">% Watts</span>
 Nrated = 1000; <span class="comment">% rpm</span>
 Tstall_cont = 102; <span class="comment">% Nm</span>
 Icont = 20.5; <span class="comment">% Amps</span>
@@ -87,20 +84,24 @@ Rth = 0.305; <span class="comment">% C/W</span>
 pole_number = 46;
 slot_number = 36;
 
+length = 36.37; <span class="comment">% mm</span>
+outer_dia = 331.46; <span class="comment">% mm</span>
+Di_rotor = 155.02; <span class="comment">% mm</span>
+
 <span class="comment">% basic inputs and calculations</span>
 module = 4;
 wrated = Nrated*2*pi/60; <span class="comment">% rad/s</span>
-Trated = Pout_total/wrated; <span class="comment">% Nm</span>
 Pout_total = Prated; <span class="comment">% Watts</span>
+Trated = Pout_total/wrated; <span class="comment">% Nm</span>
 Pout_module = Pout_total/module; <span class="comment">% Watts</span>
 <span class="comment">% Inverter configuration: 0 for H-bridge, 1 for 3-phase bridge</span>
 inverter_config = 0;
 <span class="comment">% winding configuration: 0 for distributed, 1 for concentrated</span>
 winding_config = 0;
-</pre><h2>Stator Parameters<a name="7"></a></h2><pre class="codeinput">slot_s = 48;
+</pre><h2>Stator Parameters<a name="22"></a></h2><pre class="codeinput">slot_s = slot_number;
 phase_s = 3;
-pole_s = module*2;
-q_s = slot_s/phase_s/pole_s;
+pole_r = pole_number;
+q_s = slot_s/phase_s/pole_r;
 <span class="comment">% slot per module</span>
 y_s = slot_s/module;
 layer_s = 2;
@@ -109,10 +110,10 @@ zQ = 10; <span class="comment">% number of turns per coil side</span>
 <span class="comment">% Number of turns per phase per module</span>
 Nphm = layer_s*zQ*q_s;
 
+<span class="comment">% mechanical</span>
 Do_s = 0.15; <span class="comment">% m</span>
 Di_s = 0.1; <span class="comment">% m</span>
 L_s = 0.1; <span class="comment">% m</span>
-
 Surface_s = pi*Di_s*L_s; <span class="comment">% m^2</span>
 Circum_s = pi*Di_s; <span class="comment">% m</span>
 Volume_i = Di_s^2*L_s*pi/4; <span class="comment">% m^3</span>
@@ -135,15 +136,16 @@ kw1 = kp1*kd1;
 Bgap = 0.9; <span class="comment">% Tesla</span>
 
 flux_pp = 4*(Di_s/2)*L_s*Bgap/pole_s; <span class="comment">% Weber</span>
-</pre><h2>Rotor Parameters<a name="8"></a></h2><pre class="codeinput">pole_r = 8;
+</pre><h2>Rotor Parameters<a name="23"></a></h2><pre class="codeinput">pole_r = 8;
 Do_r = 100; <span class="comment">% mm</span>
 Di_r = 30; <span class="comment">% mm</span>
+shaft_dia = Di_r; <span class="comment">% mm</span>
 
 motor_eff = 0.9;
-</pre><h2>Rectifier parameters<a name="9"></a></h2><pre class="codeinput">fs = 50; <span class="comment">% Hz</span>
+</pre><h2>Rectifier parameters<a name="24"></a></h2><pre class="codeinput">fs = 50; <span class="comment">% Hz</span>
 Vs_ll = 400; <span class="comment">% Volts</span>
 Vdc = (3/pi)*Vs_ll*sqrt(2); <span class="comment">% Volts</span>
-</pre><h2>DC Link parameters<a name="10"></a></h2><h2>Inverter Parameters<a name="11"></a></h2><pre class="codeinput"><span class="comment">% connection</span>
+</pre><h2>DC Link parameters<a name="25"></a></h2><h2>Inverter Parameters<a name="26"></a></h2><pre class="codeinput"><span class="comment">% connection</span>
 series = 2;
 parallel = module/series;
 
@@ -176,8 +178,8 @@ fsw = 100e3; <span class="comment">% Hz</span>
 
 <span class="comment">% induced_voltage_per_module_per_phase</span>
 Erms = 4.44*ffund*flux_pp*kw1*Nphm; <span class="comment">% Volts</span>
-</pre><h2>Motor design continue<a name="12"></a></h2><pre class="codeinput">Ipeak = Iline*sqrt(2); <span class="comment">% Amps</span>
-MMF_peak = (phase/2)*(4/pi)*(Nphm*Ipeak)*kw1; <span class="comment">% A-t</span>
+</pre><h2>Motor design continue<a name="27"></a></h2><pre class="codeinput">Ipeak = Iline*sqrt(2); <span class="comment">% Amps</span>
+MMF_peak = (phase_s/2)*(4/pi)*(Nphm*Ipeak)*kw1; <span class="comment">% A-t</span>
 perm_air = 4*pi*1e-7; <span class="comment">% H/m</span>
 
 <span class="comment">% conductors</span>
@@ -211,7 +213,7 @@ total_stator_slot_wire_area = layer_s*zQ*total_stator_wire_area; <span class="co
 <span class="comment">% this value is not set right now</span>
 slot_area = 100; <span class="comment">% mm^2</span>
 fill_factor = total_stator_slot_wire_area/slot_area;
-</pre><h2>RL Load design<a name="13"></a></h2><pre class="codeinput">V1load = Vph_module; <span class="comment">% V</span>
+</pre><h2>RL Load design<a name="28"></a></h2><pre class="codeinput">V1load = Vph_module; <span class="comment">% V</span>
 S1load = Sout_inv_module/3; <span class="comment">% VA</span>
 I1load = S1load/V1load; <span class="comment">% A</span>
 Z1load = V1load/I1load; <span class="comment">% Ohms</span>
@@ -223,57 +225,7 @@ L1load = X1load/(2*pi*ffund); <span class="comment">% Henries</span>
 res_val = R1load; <span class="comment">% Ohms</span>
 res_cur = I1load; <span class="comment">% A</span>
 res_pow = I1load^2*R1load; <span class="comment">% W</span>
-
-<span class="comment">% sample: http://tr.farnell.com/arcol-ohmite/fpa100-100r-j/res-thick-film-100r-5-1kv-screw/dp/2505103</span>
-
-<span class="comment">% heat sink design is required</span>
-</pre><h2>NOT USED RIGHT NOW<a name="14"></a></h2><h2>An example motor from Kollmorgen<a name="15"></a></h2><pre class="codeinput"><span class="comment">% Datasheet parameters</span>
-<span class="comment">% KBM(S)-45X02-X - B</span>
-rotor_pole = 10;
-Prated = 7200; <span class="comment">% W</span>
-Tstall_cont = 43.5; <span class="comment">% Nm</span>
-Tstall_peak = 171; <span class="comment">% Nm</span>
-Icont = 14.9; <span class="comment">% Arms</span>
-Nrated = 2350; <span class="comment">% rpm</span>
-Kt = 2.98; <span class="comment">% Nm/Arms</span>
-Kb = 180; <span class="comment">% Vrms/krpm</span>
-Rlinetoline = 0.76; <span class="comment">%Ohms</span>
-Lm = 12; <span class="comment">% mH</span>
-Vt_ll = 480; <span class="comment">% V</span>
-
-<span class="comment">% Back emf at rated speed (line-to-line)</span>
-Ea_ll = Kb*Nrated*1e-3; <span class="comment">% V</span>
-Ea = Ea_ll/sqrt(3); <span class="comment">% V</span>
-<span class="comment">% Terminal voltage</span>
-Vt = Vt_ll/sqrt(3);
-<span class="comment">% Phase resistance</span>
-Ra = Rlinetoline/2; <span class="comment">% Ohms</span>
-<span class="comment">% Drive frequency</span>
-</pre><p>Datasheet parameters KBM(S)-88X00-X - B</p><pre class="codeinput">rotor_pole = 46;
-Prated = 5460; <span class="comment">% W</span>
-Tstall_cont = 102; <span class="comment">% Nm</span>
-Tstall_peak = 197; <span class="comment">% Nm</span>
-Icont = 34; <span class="comment">% Arms</span>
-Nrated = 1000; <span class="comment">% rpm</span>
-Kt = 3.04; <span class="comment">% Nm/Arms</span>
-Kb = 184; <span class="comment">% Vrms/krpm</span>
-Rlinetoline = 0.165; <span class="comment">%Ohms</span>
-Lm = 1.6; <span class="comment">% mH</span>
-Vt_ll = 240; <span class="comment">% V</span>
-
-<span class="comment">% Back emf at rated speed (line-to-line)</span>
-Ea_ll = Kb*Nrated*1e-3; <span class="comment">% V</span>
-Ea = Ea_ll/sqrt(3); <span class="comment">% V</span>
-<span class="comment">% Terminal voltage</span>
-Vt = Vt_ll/sqrt(3);
-<span class="comment">% Phase resistance</span>
-Ra = Rlinetoline/2; <span class="comment">% Ohms</span>
-
-stator_slot = 36;
-phase = 3;
-
-<span class="comment">% Drive frequency</span>
-</pre><p class="footer"><br><a href="http://www.mathworks.com/products/matlab/">Published with MATLAB&reg; R2013a</a><br></p></div><!--
+</pre><p>sample: <a href="http://tr.farnell.com/arcol-ohmite/fpa100-100r-j/res-thick-film-100r-5-1kv-screw/dp/2505103">http://tr.farnell.com/arcol-ohmite/fpa100-100r-j/res-thick-film-100r-5-1kv-screw/dp/2505103</a></p><p>heat sink design is required for the resistive load</p><p class="footer"><br><a href="http://www.mathworks.com/products/matlab/">Published with MATLAB&reg; R2013a</a><br></p></div><!--
 ##### SOURCE BEGIN #####
 %% IMMD DESIGN TOOL
 %% M. Uğur
@@ -286,28 +238,42 @@ phase = 3;
 
 %% SPECIFICATIONS
 % Permanent Magnet Brushless DC Motor (PM-BLDC)
+%%
 % Cooling: Forced air cooling
+%%
 % Motor efficiency aim = 98 % 
+%%
 % Power stage efficiency aim = 98 % 
+%%
 % Average winding temperature rise: 130 C
+%%
 % Hot spot temperature rise: 160 C
+%%
 % Semiconductor temperature rise: 100 C
+%%
 % Maximum winding temperature: 200 C
 
 
 %% Fundamental blocks:
 % Rotor
+%%
 % Stator
+%%
 % Inverter
+%%
 % DC Link
+%%
 % Rectifier
+%%
 % Controller
+%%
 % Heat sink
 
 %% General Inputs
-
 % motor catalog (Kollmorgen, KBM(S)-88X00-X, B)
+%%
 % http://productpage.3dpublisher.net/3dproductpage/Qsvalidlogin.asp?GUID=1249850940083&name=KBM(S)-88&isCate=true
+%%
 % http://www.kollmorgen.com/en-us/products/motors/direct-drive/kbm-series-frameless/_literature/kbm-selection-guide-en-us_revg/
 Prated = 5.46e3; % Watts
 Nrated = 1000; % rpm
@@ -328,11 +294,15 @@ Rth = 0.305; % C/W
 pole_number = 46;
 slot_number = 36;
 
+length = 36.37; % mm
+outer_dia = 331.46; % mm
+Di_rotor = 155.02; % mm
+
 % basic inputs and calculations
 module = 4;
 wrated = Nrated*2*pi/60; % rad/s
-Trated = Pout_total/wrated; % Nm
 Pout_total = Prated; % Watts
+Trated = Pout_total/wrated; % Nm
 Pout_module = Pout_total/module; % Watts
 % Inverter configuration: 0 for H-bridge, 1 for 3-phase bridge
 inverter_config = 0;
@@ -340,10 +310,10 @@ inverter_config = 0;
 winding_config = 0;
 
 %% Stator Parameters
-slot_s = 48;
+slot_s = slot_number;
 phase_s = 3;
-pole_s = module*2;
-q_s = slot_s/phase_s/pole_s;
+pole_r = pole_number;
+q_s = slot_s/phase_s/pole_r;
 % slot per module
 y_s = slot_s/module;
 layer_s = 2;
@@ -352,10 +322,10 @@ zQ = 10; % number of turns per coil side
 % Number of turns per phase per module
 Nphm = layer_s*zQ*q_s;
 
+% mechanical
 Do_s = 0.15; % m
 Di_s = 0.1; % m
 L_s = 0.1; % m
-
 Surface_s = pi*Di_s*L_s; % m^2
 Circum_s = pi*Di_s; % m
 Volume_i = Di_s^2*L_s*pi/4; % m^3
@@ -384,6 +354,7 @@ flux_pp = 4*(Di_s/2)*L_s*Bgap/pole_s; % Weber
 pole_r = 8;
 Do_r = 100; % mm
 Di_r = 30; % mm
+shaft_dia = Di_r; % mm
 
 motor_eff = 0.9;
 
@@ -441,7 +412,7 @@ Erms = 4.44*ffund*flux_pp*kw1*Nphm; % Volts
 %% Motor design continue
 
 Ipeak = Iline*sqrt(2); % Amps
-MMF_peak = (phase/2)*(4/pi)*(Nphm*Ipeak)*kw1; % A-t
+MMF_peak = (phase_s/2)*(4/pi)*(Nphm*Ipeak)*kw1; % A-t
 perm_air = 4*pi*1e-7; % H/m
 
 % conductors
@@ -492,65 +463,11 @@ res_val = R1load; % Ohms
 res_cur = I1load; % A
 res_pow = I1load^2*R1load; % W
 
-% sample: http://tr.farnell.com/arcol-ohmite/fpa100-100r-j/res-thick-film-100r-5-1kv-screw/dp/2505103
-
-% heat sink design is required
-
-
-%% NOT USED RIGHT NOW
-
-%% An example motor from Kollmorgen
-
-% Datasheet parameters
-% KBM(S)-45X02-X - B
-rotor_pole = 10;
-Prated = 7200; % W
-Tstall_cont = 43.5; % Nm
-Tstall_peak = 171; % Nm
-Icont = 14.9; % Arms
-Nrated = 2350; % rpm
-Kt = 2.98; % Nm/Arms
-Kb = 180; % Vrms/krpm
-Rlinetoline = 0.76; %Ohms
-Lm = 12; % mH
-Vt_ll = 480; % V
-
-% Back emf at rated speed (line-to-line)
-Ea_ll = Kb*Nrated*1e-3; % V
-Ea = Ea_ll/sqrt(3); % V
-% Terminal voltage
-Vt = Vt_ll/sqrt(3);
-% Phase resistance
-Ra = Rlinetoline/2; % Ohms
-% Drive frequency
-
 %%
-% Datasheet parameters
-% KBM(S)-88X00-X - B
-rotor_pole = 46;
-Prated = 5460; % W
-Tstall_cont = 102; % Nm
-Tstall_peak = 197; % Nm
-Icont = 34; % Arms
-Nrated = 1000; % rpm
-Kt = 3.04; % Nm/Arms
-Kb = 184; % Vrms/krpm
-Rlinetoline = 0.165; %Ohms
-Lm = 1.6; % mH
-Vt_ll = 240; % V
+% sample: http://tr.farnell.com/arcol-ohmite/fpa100-100r-j/res-thick-film-100r-5-1kv-screw/dp/2505103
+%%
+% heat sink design is required for the resistive load
 
-% Back emf at rated speed (line-to-line)
-Ea_ll = Kb*Nrated*1e-3; % V
-Ea = Ea_ll/sqrt(3); % V
-% Terminal voltage
-Vt = Vt_ll/sqrt(3);
-% Phase resistance
-Ra = Rlinetoline/2; % Ohms
-
-stator_slot = 36;
-phase = 3;
-
-% Drive frequency
 
 
 
