--- a/simulation/html/IMMD_design_tool_v01.html
+++ b/simulation/html/IMMD_design_tool_v01.html
@@ -113,10 +113,10 @@ zQ = 10; <span class="comment">% number of turns per coil side</span>
 Nphm = layer_s*zQ*q_s;
 
 <span class="comment">% mechanical</span>
-Do_s = 0.15; <span class="comment">% m</span>
-Di_s = 0.1; <span class="comment">% m</span>
-L_s = 0.1; <span class="comment">% m</span>
-Di_r =
+Do_s = Do_stator*1e-3; <span class="comment">% m</span>
+Di_s = Di_stator*1e-3; <span class="comment">% m</span>
+L_s = length*1e-3; <span class="comment">% m</span>
+Di_r = Di_rotor*1e-3; <span class="comment">% m</span>
 Surface_s = pi*Di_s*L_s; <span class="comment">% m^2</span>
 Circum_s = pi*Di_s; <span class="comment">% m</span>
 Volume_i = Di_s^2*L_s*pi/4; <span class="comment">% m^3</span>
@@ -142,12 +142,7 @@ Volume_i = Di_s^2*L_s*pi/4; <span class="comment">% m^3</span>
 Bgap = 0.9; <span class="comment">% Tesla</span>
 
 flux_pp = 4*(Di_s/2)*L_s*Bgap/pole_s; <span class="comment">% Weber</span>
-</pre><h2>Rotor Parameters<a name="23"></a></h2><pre class="codeinput">pole_r = 8;
-Do_r = 100; <span class="comment">% mm</span>
-Di_r = 30; <span class="comment">% mm</span>
-shaft_dia = Di_r; <span class="comment">% mm</span>
-
-motor_eff = 0.9;
+</pre><h2>Rotor Parameters<a name="23"></a></h2><pre class="codeinput">motor_eff = 0.9;
 </pre><h2>Rectifier parameters<a name="24"></a></h2><pre class="codeinput">fs = 50; <span class="comment">% Hz</span>
 Vs_ll = 400; <span class="comment">% Volts</span>
 Vdc = (3/pi)*Vs_ll*sqrt(2); <span class="comment">% Volts</span>
@@ -249,6 +244,8 @@ pole = 8;
 winding = sin(pole*pi/slot);
 winding = abs(winding);
 disp(winding);
+</pre><pre class="codeoutput">    0.8660
+
 </pre><p class="footer"><br><a href="http://www.mathworks.com/products/matlab/">Published with MATLAB&reg; R2013a</a><br></p></div><!--
 ##### SOURCE BEGIN #####
 %% IMMD DESIGN TOOL
@@ -349,10 +346,10 @@ zQ = 10; % number of turns per coil side
 Nphm = layer_s*zQ*q_s;
 
 % mechanical
-Do_s = 0.15; % m
-Di_s = 0.1; % m
-L_s = 0.1; % m
-Di_r = 
+Do_s = Do_stator*1e-3; % m
+Di_s = Di_stator*1e-3; % m
+L_s = length*1e-3; % m
+Di_r = Di_rotor*1e-3; % m
 Surface_s = pi*Di_s*L_s; % m^2
 Circum_s = pi*Di_s; % m
 Volume_i = Di_s^2*L_s*pi/4; % m^3
@@ -381,11 +378,6 @@ flux_pp = 4*(Di_s/2)*L_s*Bgap/pole_s; % Weber
 
 
 %% Rotor Parameters
-pole_r = 8;
-Do_r = 100; % mm
-Di_r = 30; % mm
-shaft_dia = Di_r; % mm
-
 motor_eff = 0.9;
 
 
